--- a/design doc/designdoc.html
+++ b/design doc/designdoc.html
@@ -20,7 +20,7 @@
 
 
         <div id="middle">
-            <img id="img_me" width="150" src="action.png" alt="action" />
+            <img id="img_me" width="150" src="../media/action.png" alt="action" />
             <div id="text_me">
                 <p id="bio">
                     A database of movie information for those who are a little unsure of what they want to watch.</p>
@@ -67,7 +67,7 @@
 
             <div class="projects">Mockups</div>
             <br>
-            <br><img src="preview.jpg" alt="mockup" />
+            <br><img src="../media/preview.jpg" alt="mockup" />
         </div>
 
         <p id="gibson"><a href="#">View Prototype (not yet)</a></p>
