--- a/groovy movies/groovymovies.html
+++ b/groovy movies/groovymovies.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 
     <!--scripts-->
+    <script src="../js/jquery.js"></script>
+    <script src="../js/video.js"></script>
+    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="../js/gauge.js" language="JavaScript"></script>
+    <script src="../js/data.js"></script>
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
@@ -46,15 +51,8 @@
             <div id="dynamicContent">
                 <p>No data yet!</p>
             </div>
-            <svg id="fillgauge1"></svg>
         </section>
     </div>
-
-    <script src="../js/jquery.js"></script>
-    <script src="../js/video.js"></script>
-    <script src="../js/d3.min.js" language="JavaScript"></script>
-    <script src="../js/gauge.js" language="JavaScript"></script>
-    <script src="../js/data.js"></script>
 
 </body>
 
