--- a/groovy movies/groovymovies.html
+++ b/groovy movies/groovymovies.html
@@ -12,7 +12,7 @@
     <!--scripts-->
     <script src="../js/jquery.js"></script>
     <script src="../js/video.js"></script>
-    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="../js/d3.min.js" charset="utf-8"></script>
     <script src="../js/gauge.js" language="JavaScript"></script>
     <script src="../js/data.js"></script>
 
